# rv1126_rknn_blazeface

./: BlazeFace.cpp  BlazeFace.h  CMakeLists.txt  README.md  main.cpp
common/: PixelConvert.cpp  PixelConvert.h
include/opencv2/: cvconfig.h  opencv_modules.hpp
include/rtsp/: rtsp.h
lib/opencv/: libopencv_calib3d.so.3.4.3  libopencv_core.so.3.4.3  libopencv_features2d.so.3.4.3  libopencv_flann.so.3.4.3  libopencv_imgcodecs.so.3.4.3  libopencv_imgproc.so.3.4.3  libopencv_photo.so.3.4.3  libopencv_shape.so.3.4.3  libopencv_video.so.3.4.3  libopencv_videoio.so.3.4.3
models/: blazeface-16.rknn  blazeface.rknn
